--- a/InceptionResnet.ipynb
+++ b/InceptionResnet.ipynb
@@ -476,7 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resnet = models.resnet34(pretrained=True)"
+    "import pretrainedmodels"
    ]
   },
   {
@@ -485,47 +485,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layers = list(resnet.children())"
+    "# model_name = 'inceptionresnetv2'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(len(layers))"
+    "# model = pretrainedmodels.__dict__[model_name](num_classes=1000, pretrained='imagenet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "downloaded_model_path = Path(\"/home/ubuntu/models/sandwich/downloaded_inceptionresnetv2.pth\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[AdaptiveAvgPool2d(output_size=(1, 1)),\n",
-       " Linear(in_features=512, out_features=1000, bias=True)]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "layers[-2:]"
+    "# torch.save(model, downloaded_model_path)"
    ]
   },
   {
@@ -534,44 +521,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Resnet(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Resnet, self).__init__()\n",
-    "        resnet = models.resnet34(pretrained=True)\n",
-    "        # freezing parameters\n",
-    "        for param in resnet.parameters():\n",
-    "            param.requires_grad = False\n",
-    "        # convolutional layers of resnet34\n",
-    "        layers = list(resnet.children())[:8]\n",
-    "        self.top_model = nn.Sequential(*layers).cuda()\n",
-    "        self.fc = nn.Linear(512, 6)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x = F.relu(self.top_model(x))\n",
-    "        x = nn.AdaptiveAvgPool2d((1,1))(x)\n",
-    "        x = x.view(x.shape[0], -1) # flattening \n",
-    "        x = self.fc(x)\n",
-    "        return x"
+    "inception_resnet = torch.load(downloaded_model_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model = Resnet().cuda()"
+    "layers = list(inception_resnet.children())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
    "source": [
-    "x_features = model.top_model(x)"
+    "print(len(layers))"
    ]
   },
   {
@@ -582,7 +558,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([36, 512, 10, 10])"
+       "Linear(in_features=1536, out_features=1000, bias=True)"
       ]
      },
      "execution_count": 41,
@@ -591,7 +567,7 @@
     }
    ],
    "source": [
-    "x_features.shape"
+    "inception_resnet.last_linear"
    ]
   },
   {
@@ -600,29 +576,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_features_ave = nn.AdaptiveAvgPool2d((1,1))(x_features)"
+    "class InceptionResnet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(InceptionResnet, self).__init__()\n",
+    "        self.model = torch.load(Path(\"/home/ubuntu/models/sandwich/downloaded_inceptionresnetv2.pth\"))\n",
+    "        # freezing parameters\n",
+    "        for param in self.model.parameters():\n",
+    "            param.requires_grad = False\n",
+    "        self.model.last_linear = nn.Linear(1536, 6)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.model(x)\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([36, 512, 1, 1])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x_features_ave.shape"
+    "model = InceptionResnet().cuda()"
    ]
   },
   {
@@ -631,45 +607,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x_features_ave.size(0), x_features_ave.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_features_flatten = x_features_ave.view(x_features_ave.shape[0], -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([36, 512])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_features_flatten.shape"
+    "out = model(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([36, 6])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "out = model(x)"
+    "out.shape"
    ]
   },
   {
@@ -678,21 +638,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "_, pred = torch.max(out, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -700,11 +651,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], device='cuda:0')"
+       "tensor([2, 4, 4, 2, 1, 2, 2, 1, 5, 2, 0, 2, 0, 4, 2, 4, 2, 2, 4, 2, 2, 2, 2, 0,\n",
+       "        4, 4, 2, 2, 4, 4, 4, 0, 4, 0, 2, 2], device='cuda:0')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,19 +666,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([2, 4, 5, 0, 4, 0, 4, 4, 2, 0, 4, 4, 4, 1, 3, 3, 3, 0, 4, 0, 2, 1, 5, 5,\n",
-       "        3, 0, 3, 4, 2, 2, 4, 3, 4, 2, 4, 2], device='cuda:0')"
+       "tensor([3, 1, 4, 0, 0, 1, 2, 3, 2, 4, 0, 5, 1, 3, 1, 0, 3, 5, 0, 5, 0, 1, 4, 5,\n",
+       "        2, 2, 4, 1, 1, 0, 1, 3, 5, 1, 5, 0], device='cuda:0')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,16 +689,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(2, device='cuda:0')"
+       "tensor(3, device='cuda:0')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,16 +709,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.1193506717681885"
+       "1.83401358127594"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,16 +762,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.9614320135116576, 0.15888888888888889)"
+       "(1.8203975677490234, 0.14444444444444443)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,16 +835,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Resnet().cuda()"
+    "model = InceptionResnet().cuda()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -898,11 +853,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.486 val loss 1.003 val accuracy 0.634\n",
-      "train loss 0.929 val loss 0.849 val accuracy 0.706\n",
-      "train loss 0.849 val loss 0.727 val accuracy 0.744\n",
-      "train loss 0.803 val loss 0.754 val accuracy 0.747\n",
-      "train loss 0.868 val loss 0.892 val accuracy 0.736\n"
+      "train loss 1.520 val loss 1.313 val accuracy 0.502\n",
+      "train loss 1.343 val loss 1.062 val accuracy 0.647\n",
+      "train loss 1.390 val loss 0.956 val accuracy 0.671\n",
+      "train loss 1.312 val loss 1.164 val accuracy 0.583\n",
+      "train loss 1.356 val loss 1.255 val accuracy 0.572\n"
      ]
     }
    ],
@@ -919,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,29 +885,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = Path(\"/home/ubuntu/models/sandwich/initial_resnet.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_model(model, model_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Resnet().cuda()"
+    "model_path = Path(\"/home/ubuntu/models/sandwich/initial_inceptionresnet.pth\")"
    ]
   },
   {
@@ -961,21 +898,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path)"
+    "save_model(model, model_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = InceptionResnet().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8915744745731353, 0.7355555555555555)"
+       "(1.2552533555030823, 0.5722222222222222)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
