--- a/Densenet.ipynb
+++ b/Densenet.ipynb
@@ -52,10 +52,18 @@
      "data": {
       "text/plain": [
        "[PosixPath('/home/ubuntu/data/sandwich/train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-he-train-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.DS_Store'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-he-test-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/ce-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/train'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/he-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/ce-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/he-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.ipynb_checkpoints')]"
       ]
      },
@@ -602,8 +610,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([3, 3, 2, 2, 2, 3, 2, 2, 2, 2, 2, 3, 2, 3, 3, 2, 2, 2, 2, 2, 3, 3, 3, 3,\n",
-       "        3, 2, 2, 2, 3, 3, 2, 2, 2, 2, 2, 2], device='cuda:0')"
+       "tensor([0, 0, 0, 3, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 4, 0, 0, 0, 0, 3, 0, 0,\n",
+       "        0, 0, 0, 0, 3, 3, 0, 0, 3, 0, 0, 0], device='cuda:0')"
       ]
      },
      "execution_count": 43,
@@ -625,8 +633,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0, 3, 2, 3, 1, 4, 2, 2, 1, 1, 0, 3, 1, 3, 3, 2, 0, 4, 0, 4, 0, 1, 5, 3,\n",
-       "        4, 4, 0, 4, 5, 2, 5, 3, 5, 1, 5, 1], device='cuda:0')"
+       "tensor([4, 5, 1, 0, 5, 5, 0, 5, 0, 1, 5, 0, 0, 1, 4, 1, 1, 3, 2, 2, 1, 1, 4, 1,\n",
+       "        3, 5, 0, 2, 3, 2, 1, 5, 2, 3, 4, 1], device='cuda:0')"
       ]
      },
      "execution_count": 44,
@@ -646,7 +654,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(9, device='cuda:0')"
+       "tensor(5, device='cuda:0')"
       ]
      },
      "execution_count": 45,
@@ -666,7 +674,7 @@
     {
      "data": {
       "text/plain": [
-       "1.956755518913269"
+       "1.9452317953109741"
       ]
      },
      "execution_count": 46,
@@ -717,7 +725,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.8815940046310424, 0.1688888888888889)"
+       "(1.839641923904419, 0.1711111111111111)"
       ]
      },
      "execution_count": 48,
@@ -777,7 +785,8 @@
     "            total += batch\n",
     "            sum_loss += batch*(loss.item())\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
-    "        print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
+    "        if i % 2 == 0:\n",
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
    ]
   },
   {
@@ -800,23 +809,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.357 val loss 0.937 val accuracy 0.663\n",
-      "train loss 0.813 val loss 0.686 val accuracy 0.762\n",
-      "train loss 0.786 val loss 0.686 val accuracy 0.748\n",
-      "train loss 0.703 val loss 0.948 val accuracy 0.696\n",
-      "train loss 0.715 val loss 0.750 val accuracy 0.768\n"
+      "train loss 1.412 val loss 0.740 val accuracy 0.723\n",
+      "train loss 0.758 val loss 0.824 val accuracy 0.719\n",
+      "train loss 0.676 val loss 0.982 val accuracy 0.702\n",
+      "train loss 0.681 val loss 1.068 val accuracy 0.664\n",
+      "train loss 0.655 val loss 1.039 val accuracy 0.693\n"
      ]
     }
    ],
    "source": [
-    "train(model, epochs=5, learning_rate=0.01)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Save model"
+    "train(model, epochs=10, learning_rate=0.01)"
    ]
   },
   {
@@ -874,7 +876,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.7501993978023529, 0.7677777777777778)"
+       "(1.012032322883606, 0.7088888888888889)"
       ]
      },
      "execution_count": 58,
