--- a/Inception.ipynb
+++ b/Inception.ipynb
@@ -52,10 +52,18 @@
      "data": {
       "text/plain": [
        "[PosixPath('/home/ubuntu/data/sandwich/train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-he-train-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.DS_Store'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-he-test-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/ce-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/train'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/he-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/ce-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/he-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.ipynb_checkpoints')]"
       ]
      },
@@ -383,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 36"
+    "batch_size = 100"
    ]
   },
   {
@@ -431,7 +439,7 @@
     {
      "data": {
       "text/plain": [
-       "(torch.Size([36, 3, 299, 299]), torch.Size([36]))"
+       "(torch.Size([100, 3, 299, 299]), torch.Size([100]))"
       ]
      },
      "execution_count": 31,
@@ -451,7 +459,7 @@
     {
      "data": {
       "text/plain": [
-       "36"
+       "100"
       ]
      },
      "execution_count": 32,
@@ -607,8 +615,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([5, 3, 5, 0, 5, 5, 5, 5, 5, 5, 3, 0, 4, 5, 0, 0, 0, 5, 0, 3, 5, 0, 0, 5,\n",
-       "        0, 5, 5, 1, 0, 5, 1, 5, 0, 0, 4, 5], device='cuda:0')"
+       "tensor([4, 1, 1, 0, 2, 0, 1, 4, 3, 1, 1, 1, 3, 1, 4, 1, 1, 1, 4, 4, 1, 4, 1, 1,\n",
+       "        4, 1, 2, 1, 3, 4, 4, 1, 1, 2, 1, 1, 3, 1, 3, 4, 1, 1, 4, 1, 3, 2, 0, 1,\n",
+       "        1, 0, 4, 3, 3, 1, 4, 3, 1, 2, 3, 4, 2, 4, 3, 3, 3, 3, 1, 0, 3, 1, 2, 3,\n",
+       "        1, 4, 3, 3, 2, 3, 3, 2, 4, 1, 4, 2, 4, 2, 1, 1, 3, 4, 2, 2, 5, 2, 1, 4,\n",
+       "        3, 1, 3, 4], device='cuda:0')"
       ]
      },
      "execution_count": 43,
@@ -630,8 +641,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0, 4, 3, 2, 2, 0, 1, 4, 5, 4, 4, 5, 5, 1, 5, 2, 3, 2, 2, 5, 4, 0, 5, 2,\n",
-       "        5, 0, 5, 2, 1, 5, 2, 1, 2, 0, 5, 0], device='cuda:0')"
+       "tensor([2, 2, 1, 3, 4, 1, 0, 0, 4, 4, 2, 1, 5, 5, 2, 2, 3, 3, 5, 4, 4, 2, 0, 3,\n",
+       "        0, 4, 2, 3, 4, 4, 1, 2, 4, 3, 0, 4, 3, 4, 1, 1, 2, 0, 0, 1, 2, 5, 3, 4,\n",
+       "        0, 1, 1, 1, 2, 4, 0, 1, 3, 2, 1, 1, 5, 5, 1, 0, 4, 4, 5, 5, 3, 1, 0, 3,\n",
+       "        5, 0, 0, 5, 4, 2, 3, 0, 1, 3, 1, 1, 0, 0, 2, 3, 5, 1, 1, 0, 2, 1, 0, 5,\n",
+       "        3, 1, 1, 0], device='cuda:0')"
       ]
      },
      "execution_count": 44,
@@ -651,7 +665,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(5, device='cuda:0')"
+       "tensor(14, device='cuda:0')"
       ]
      },
      "execution_count": 45,
@@ -673,7 +687,7 @@
     {
      "data": {
       "text/plain": [
-       "1.788835048675537"
+       "1.8029375076293945"
       ]
      },
      "execution_count": 46,
@@ -726,7 +740,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.7966006231307983, 0.18555555555555556)"
+       "(1.8525471554862127, 0.14444444444444443)"
       ]
      },
      "execution_count": 48,
@@ -763,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +800,8 @@
     "            total += batch\n",
     "            sum_loss += batch*(loss.item())\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
-    "        print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
+    "        if i % 2 == 0:\n",
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
    ]
   },
   {
@@ -800,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
@@ -809,28 +824,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.661 val loss 1.015 val accuracy 0.621\n",
-      "train loss 1.461 val loss 1.047 val accuracy 0.626\n",
-      "train loss 1.612 val loss 1.787 val accuracy 0.586\n",
-      "train loss 1.710 val loss 1.220 val accuracy 0.612\n",
-      "train loss 1.735 val loss 1.394 val accuracy 0.608\n"
+      "train loss 1.917 val loss 1.059 val accuracy 0.611\n",
+      "train loss 1.154 val loss 0.971 val accuracy 0.648\n",
+      "train loss 1.082 val loss 0.968 val accuracy 0.631\n",
+      "train loss 1.222 val loss 1.017 val accuracy 0.638\n",
+      "train loss 1.103 val loss 1.150 val accuracy 0.613\n"
      ]
     }
    ],
    "source": [
-    "train(model, epochs=5, learning_rate=0.01)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Save model"
+    "train(model, epochs=10, learning_rate=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,16 +885,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.394274594783783, 0.6077777777777778)"
+       "(1.149076031314002, 0.6088888888888889)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
