--- a/InceptionResnet.ipynb
+++ b/InceptionResnet.ipynb
@@ -52,10 +52,18 @@
      "data": {
       "text/plain": [
        "[PosixPath('/home/ubuntu/data/sandwich/train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-he-train-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.DS_Store'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-he-test-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/ce-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/train'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/he-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/gw-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/ce-train-315'),\n",
+       " PosixPath('/home/ubuntu/data/sandwich/he-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.ipynb_checkpoints')]"
       ]
      },
@@ -383,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 36"
+    "batch_size = 100"
    ]
   },
   {
@@ -431,7 +439,7 @@
     {
      "data": {
       "text/plain": [
-       "(torch.Size([36, 3, 299, 299]), torch.Size([36]))"
+       "(torch.Size([100, 3, 299, 299]), torch.Size([100]))"
       ]
      },
      "execution_count": 31,
@@ -451,7 +459,7 @@
     {
      "data": {
       "text/plain": [
-       "36"
+       "100"
       ]
      },
      "execution_count": 32,
@@ -612,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -620,10 +628,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([36, 6])"
+       "torch.Size([100, 6])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -651,11 +659,14 @@
     {
      "data": {
       "text/plain": [
-       "tensor([2, 4, 4, 2, 1, 2, 2, 1, 5, 2, 0, 2, 0, 4, 2, 4, 2, 2, 4, 2, 2, 2, 2, 0,\n",
-       "        4, 4, 2, 2, 4, 4, 4, 0, 4, 0, 2, 2], device='cuda:0')"
+       "tensor([0, 2, 5, 0, 0, 4, 0, 0, 0, 5, 4, 4, 2, 0, 0, 0, 2, 2, 2, 5, 0, 2, 2, 0,\n",
+       "        2, 2, 1, 2, 0, 0, 0, 0, 4, 0, 1, 0, 3, 0, 4, 3, 3, 0, 1, 0, 4, 0, 4, 4,\n",
+       "        2, 0, 3, 2, 0, 3, 5, 4, 2, 0, 2, 2, 0, 2, 2, 0, 0, 2, 0, 2, 5, 0, 0, 1,\n",
+       "        1, 0, 0, 4, 2, 0, 2, 4, 0, 0, 5, 0, 0, 2, 0, 0, 2, 0, 2, 0, 3, 0, 2, 4,\n",
+       "        0, 2, 0, 0], device='cuda:0')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -674,11 +685,14 @@
     {
      "data": {
       "text/plain": [
-       "tensor([3, 1, 4, 0, 0, 1, 2, 3, 2, 4, 0, 5, 1, 3, 1, 0, 3, 5, 0, 5, 0, 1, 4, 5,\n",
-       "        2, 2, 4, 1, 1, 0, 1, 3, 5, 1, 5, 0], device='cuda:0')"
+       "tensor([4, 0, 2, 3, 3, 5, 4, 5, 3, 5, 4, 2, 5, 4, 3, 0, 2, 2, 3, 2, 4, 2, 0, 2,\n",
+       "        4, 3, 4, 4, 5, 5, 2, 3, 1, 0, 5, 1, 1, 5, 1, 0, 2, 1, 1, 2, 0, 1, 5, 3,\n",
+       "        2, 0, 0, 3, 0, 5, 1, 0, 0, 0, 4, 2, 0, 4, 5, 0, 0, 5, 3, 4, 0, 1, 2, 2,\n",
+       "        5, 4, 1, 0, 5, 1, 4, 3, 4, 5, 1, 3, 1, 3, 1, 3, 3, 1, 3, 5, 5, 2, 2, 3,\n",
+       "        2, 2, 4, 5], device='cuda:0')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,16 +703,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(3, device='cuda:0')"
+       "tensor(18, device='cuda:0')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -717,10 +731,10 @@
     {
      "data": {
       "text/plain": [
-       "1.83401358127594"
+       "1.7973129749298096"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
@@ -770,10 +784,10 @@
     {
      "data": {
       "text/plain": [
-       "(1.8203975677490234, 0.14444444444444443)"
+       "(1.8247488074832492, 0.10333333333333333)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +844,69 @@
     "            total += batch\n",
     "            sum_loss += batch*(loss.item())\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
-    "        print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
+    "        if i % 2 == 0:\n",
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = InceptionResnet().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 1.648 val loss 1.019 val accuracy 0.648\n",
+      "train loss 1.085 val loss 0.916 val accuracy 0.658\n",
+      "train loss 1.132 val loss 1.052 val accuracy 0.611\n",
+      "train loss 1.173 val loss 0.970 val accuracy 0.648\n",
+      "train loss 1.142 val loss 0.953 val accuracy 0.653\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(model, epochs=10, learning_rate=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(m, p): torch.save(m.state_dict(), p)\n",
+    "    \n",
+    "def load_model(m, p): m.load_state_dict(torch.load(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = Path(\"/home/ubuntu/models/sandwich/initial_inceptionresnet.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_model(model, model_path)"
    ]
   },
   {
@@ -845,74 +921,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train loss 1.520 val loss 1.313 val accuracy 0.502\n",
-      "train loss 1.343 val loss 1.062 val accuracy 0.647\n",
-      "train loss 1.390 val loss 0.956 val accuracy 0.671\n",
-      "train loss 1.312 val loss 1.164 val accuracy 0.583\n",
-      "train loss 1.356 val loss 1.255 val accuracy 0.572\n"
-     ]
-    }
-   ],
-   "source": [
-    "train(model, epochs=5, learning_rate=0.01)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Save model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_model(m, p): torch.save(m.state_dict(), p)\n",
-    "    \n",
-    "def load_model(m, p): m.load_state_dict(torch.load(p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = Path(\"/home/ubuntu/models/sandwich/initial_inceptionresnet.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_model(model, model_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = InceptionResnet().cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,16 +929,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.2552533555030823, 0.5722222222222222)"
+       "(0.9449603292677138, 0.6588888888888889)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
