--- a/Resnet.ipynb
+++ b/Resnet.ipynb
@@ -356,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 100"
+    "batch_size = 50"
    ]
   },
   {
@@ -639,7 +639,7 @@
     {
      "data": {
       "text/plain": [
-       "1.8946623802185059"
+       "1.9382858276367188"
       ]
      },
      "execution_count": 52,
@@ -692,7 +692,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.8630210293663874, 0.16777777777777778)"
+       "(1.985863486925761, 0.16444444444444445)"
       ]
      },
      "execution_count": 54,
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,6 +739,7 @@
     "        model.train()\n",
     "        total = 0\n",
     "        sum_loss = 0\n",
+    "        prev_val_acc = 0.0\n",
     "        for x, y in train_dl:\n",
     "            batch = y.shape[0]\n",
     "            x = x.cuda().float()\n",
@@ -752,12 +753,18 @@
     "            sum_loss += batch*(loss.item())\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
     "        if i % 2 == 0:\n",
-    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc: \n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.8:\n",
+    "                path = \"{0}/ft_resnet_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -775,11 +782,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.750 val loss 0.935 val accuracy 0.651\n",
-      "train loss 0.821 val loss 0.829 val accuracy 0.702\n",
-      "train loss 0.784 val loss 0.808 val accuracy 0.722\n",
-      "train loss 0.771 val loss 0.832 val accuracy 0.709\n",
-      "train loss 0.733 val loss 0.845 val accuracy 0.747\n"
+      "train loss 1.498 val loss 0.806 val accuracy 0.717\n",
+      "train loss 0.772 val loss 0.853 val accuracy 0.681\n",
+      "train loss 0.811 val loss 0.838 val accuracy 0.724\n",
+      "train loss 0.787 val loss 1.001 val accuracy 0.701\n",
+      "train loss 0.737 val loss 0.849 val accuracy 0.710\n"
      ]
     }
    ],
@@ -789,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -851,10 +858,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.8427533474233415, 0.7055555555555556)"
+       "(0.798882888423072, 0.7488888888888889)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,28 +903,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.151 val loss 0.986 val accuracy 0.673\n",
-      "train loss 0.454 val loss 0.559 val accuracy 0.819\n",
-      "train loss 0.329 val loss 0.868 val accuracy 0.742\n",
-      "train loss 0.262 val loss 0.684 val accuracy 0.781\n",
-      "train loss 0.226 val loss 0.689 val accuracy 0.787\n"
+      "train loss 1.293 val loss 0.893 val accuracy 0.679\n",
+      "train loss 0.478 val loss 0.737 val accuracy 0.758\n",
+      "train loss 0.363 val loss 0.794 val accuracy 0.761\n",
+      "train loss 0.264 val loss 0.572 val accuracy 0.812\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_81.pth\n",
+      "train loss 0.176 val loss 1.091 val accuracy 0.771\n",
+      "train loss 0.178 val loss 0.695 val accuracy 0.810\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_81.pth\n",
+      "train loss 0.128 val loss 0.887 val accuracy 0.769\n",
+      "train loss 0.095 val loss 0.855 val accuracy 0.786\n",
+      "train loss 0.117 val loss 1.215 val accuracy 0.750\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_80.pth\n",
+      "train loss 0.088 val loss 0.776 val accuracy 0.812\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_81.pth\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_80.pth\n"
      ]
     }
    ],
    "source": [
-    "train(model, epochs=10, learning_rate=0.001)"
+    "train(model, epochs=20, learning_rate=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,16 +961,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6824882278839747, 0.8088888888888889)"
+       "(0.8814398679468367, 0.8022222222222222)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,12 +1129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1-cycle rate training"
+    "## 1-cycle rate training, unfreeze all hidden layers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_triangular_policy(model, train_dl, valid_dl, max_lr=0.05, epochs=10):\n",
+    "def train_triangular_policy(model, train_dl, valid_dl, max_lr=0.06, epochs=10):\n",
     "    idx = 0\n",
     "    iterations = epochs*len(train_dl)\n",
     "    lrs = get_cosine_triangular_lr(max_lr, iterations)\n",
@@ -1175,7 +1192,7 @@
     "        print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.75:\n",
+    "            if val_acc > 0.8:\n",
     "                path = \"{0}/ft_resnet_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)\n",
@@ -1294,6 +1311,152 @@
    ],
    "source": [
     "train_triangular_policy(model, train_dl, valid_dl, max_lr=0.06, epochs=30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1-cycle rate training, unfreeze top hidden layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_triangular_policy2(model, train_dl, valid_dl, max_lr=0.06, epochs=10):\n",
+    "    idx = 0\n",
+    "    iterations = epochs*len(train_dl)\n",
+    "    lrs = get_cosine_triangular_lr(max_lr, iterations)\n",
+    "    optimizer = create_optimizer(model, lrs[0])\n",
+    "    prev_val_acc = 0.0\n",
+    "    for i in range(epochs):\n",
+    "        model.train()\n",
+    "        total = 0\n",
+    "        sum_loss = 0\n",
+    "        for i, (x, y) in enumerate(train_dl):\n",
+    "            lr = lrs[idx]\n",
+    "            update_optimizer(optimizer, [lr/9, lr/3, lr]) # In each iteration, update group learning rates\n",
+    "            batch = y.shape[0]\n",
+    "            x = x.cuda().float()\n",
+    "            y = y.cuda()\n",
+    "            out = model(x)\n",
+    "            loss = F.cross_entropy(out, y)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            idx += 1\n",
+    "            if idx == int(0.1*iterations):\n",
+    "                model.unfreeze(1)\n",
+    "                print(idx, \"unfreezing 1\")\n",
+    "#             if idx == int(0.2*iterations):\n",
+    "#                 model.unfreeze(0)\n",
+    "#                 print(idx, \"unfreezing 0\")\n",
+    "            total += batch\n",
+    "            sum_loss += batch*(loss.item())\n",
+    "        train_loss = sum_loss/total\n",
+    "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
+    "        print(\"train_loss %.3f val_loss %.3f val_acc %.3f\" % (train_loss, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc: \n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.8:\n",
+    "                path = \"{0}/ft_resnet_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)\n",
+    "    return sum_loss/total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ResnetV2().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.9448052909639146, 0.14555555555555555)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_loss 1.337 val_loss 1.000 val_acc 0.636\n",
+      "train_loss 0.929 val_loss 0.852 val_acc 0.698\n",
+      "216 unfreezing 1\n",
+      "train_loss 1.041 val_loss 1.015 val_acc 0.686\n",
+      "train_loss 2.133 val_loss 1.690 val_acc 0.362\n",
+      "train_loss 1.505 val_loss 232.954 val_acc 0.150\n",
+      "train_loss 1.311 val_loss 1.286 val_acc 0.534\n",
+      "train_loss 1.018 val_loss 1.309 val_acc 0.554\n",
+      "train_loss 0.890 val_loss 1.083 val_acc 0.643\n",
+      "train_loss 0.809 val_loss 1.038 val_acc 0.616\n",
+      "train_loss 0.736 val_loss 0.851 val_acc 0.729\n",
+      "train_loss 0.681 val_loss 1.183 val_acc 0.636\n",
+      "train_loss 0.601 val_loss 0.826 val_acc 0.743\n",
+      "train_loss 0.551 val_loss 0.860 val_acc 0.729\n",
+      "train_loss 0.507 val_loss 0.995 val_acc 0.693\n",
+      "train_loss 0.488 val_loss 1.024 val_acc 0.681\n",
+      "train_loss 0.416 val_loss 0.894 val_acc 0.749\n",
+      "train_loss 0.426 val_loss 0.809 val_acc 0.727\n",
+      "train_loss 0.359 val_loss 0.787 val_acc 0.763\n",
+      "train_loss 0.329 val_loss 0.729 val_acc 0.780\n",
+      "train_loss 0.283 val_loss 0.928 val_acc 0.767\n",
+      "train_loss 0.247 val_loss 0.838 val_acc 0.791\n",
+      "train_loss 0.223 val_loss 0.857 val_acc 0.771\n",
+      "train_loss 0.183 val_loss 0.630 val_acc 0.819\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_82.pth\n",
+      "train_loss 0.136 val_loss 0.729 val_acc 0.811\n",
+      "train_loss 0.112 val_loss 0.625 val_acc 0.839\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_84.pth\n",
+      "train_loss 0.092 val_loss 0.657 val_acc 0.840\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_84.pth\n",
+      "train_loss 0.078 val_loss 0.678 val_acc 0.842\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_84.pth\n",
+      "train_loss 0.066 val_loss 0.677 val_acc 0.836\n",
+      "train_loss 0.062 val_loss 0.663 val_acc 0.842\n",
+      "train_loss 0.061 val_loss 0.664 val_acc 0.848\n",
+      "/home/ubuntu/models/sandwich/ft_resnet_loss_85.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0612638705319518"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_triangular_policy2(model, train_dl, valid_dl, max_lr=0.06, epochs=30)"
    ]
   },
   {
