--- a/Resnet.ipynb
+++ b/Resnet.ipynb
@@ -639,7 +639,7 @@
     {
      "data": {
       "text/plain": [
-       "1.9382858276367188"
+       "1.942513108253479"
       ]
      },
      "execution_count": 52,
@@ -692,7 +692,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.985863486925761, 0.16444444444444445)"
+       "(1.8219260308477614, 0.16666666666666666)"
       ]
      },
      "execution_count": 54,
@@ -717,6 +717,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def save_model(m, p): torch.save(m.state_dict(), p)\n",
+    "    \n",
+    "def load_model(m, p): m.load_state_dict(torch.load(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = Path(\"/home/ubuntu/models/sandwich/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_optimizer(model, lr=0.01, wd=0.0):\n",
     "    parameters = filter(lambda p: p.requires_grad, model.parameters())\n",
     "    optim = torch.optim.Adam(parameters, lr=lr, weight_decay=wd)\n",
@@ -729,17 +749,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(model, epochs=5, learning_rate=0.01):\n",
     "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
+    "    prev_val_acc = 0.0\n",
     "    for i in range(epochs):\n",
     "        model.train()\n",
     "        total = 0\n",
     "        sum_loss = 0\n",
-    "        prev_val_acc = 0.0\n",
     "        for x, y in train_dl:\n",
     "            batch = y.shape[0]\n",
     "            x = x.cuda().float()\n",
@@ -764,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,45 +793,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.498 val loss 0.806 val accuracy 0.717\n",
-      "train loss 0.772 val loss 0.853 val accuracy 0.681\n",
-      "train loss 0.811 val loss 0.838 val accuracy 0.724\n",
-      "train loss 0.787 val loss 1.001 val accuracy 0.701\n",
-      "train loss 0.737 val loss 0.849 val accuracy 0.710\n"
+      "train loss 1.694 val loss 0.950 val accuracy 0.644\n",
+      "train loss 0.848 val loss 1.089 val accuracy 0.614\n",
+      "train loss 0.759 val loss 0.838 val accuracy 0.707\n",
+      "train loss 0.778 val loss 0.876 val accuracy 0.711\n",
+      "train loss 0.742 val loss 0.887 val accuracy 0.720\n"
      ]
     }
    ],
    "source": [
     "train(model, epochs=10, learning_rate=0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_model(m, p): torch.save(m.state_dict(), p)\n",
-    "    \n",
-    "def load_model(m, p): m.load_state_dict(torch.load(p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = Path(\"/home/ubuntu/models/sandwich/\")"
    ]
   },
   {
@@ -858,7 +858,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.798882888423072, 0.7488888888888889)"
+       "(0.7318511936399672, 0.75)"
       ]
      },
      "execution_count": 64,
