--- a/Inception.ipynb
+++ b/Inception.ipynb
@@ -340,20 +340,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3600, 900)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(train_ds), len(valid_ds)"
+    "# len(train_ds), len(valid_ds)"
    ]
   },
   {
@@ -369,20 +358,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((3, 299, 299), 5)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x.shape, y"
+    "# x.shape, y"
    ]
   },
   {
@@ -391,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 100"
+    "batch_size = 50"
    ]
   },
   {
@@ -435,40 +413,18 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([100, 3, 299, 299]), torch.Size([100]))"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x.shape, y.shape"
+    "# x.shape, y.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y.shape[0]"
+    "# y.shape[0]"
    ]
   },
   {
@@ -516,6 +472,26 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# layers[15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# layers[16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +500,7 @@
        "(768, 2048)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {
     "scrolled": false
    },
@@ -567,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -587,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -598,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,90 +583,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([4, 1, 1, 0, 2, 0, 1, 4, 3, 1, 1, 1, 3, 1, 4, 1, 1, 1, 4, 4, 1, 4, 1, 1,\n",
-       "        4, 1, 2, 1, 3, 4, 4, 1, 1, 2, 1, 1, 3, 1, 3, 4, 1, 1, 4, 1, 3, 2, 0, 1,\n",
-       "        1, 0, 4, 3, 3, 1, 4, 3, 1, 2, 3, 4, 2, 4, 3, 3, 3, 3, 1, 0, 3, 1, 2, 3,\n",
-       "        1, 4, 3, 3, 2, 3, 3, 2, 4, 1, 4, 2, 4, 2, 1, 1, 3, 4, 2, 2, 5, 2, 1, 4,\n",
-       "        3, 1, 3, 4], device='cuda:0')"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([2, 2, 1, 3, 4, 1, 0, 0, 4, 4, 2, 1, 5, 5, 2, 2, 3, 3, 5, 4, 4, 2, 0, 3,\n",
-       "        0, 4, 2, 3, 4, 4, 1, 2, 4, 3, 0, 4, 3, 4, 1, 1, 2, 0, 0, 1, 2, 5, 3, 4,\n",
-       "        0, 1, 1, 1, 2, 4, 0, 1, 3, 2, 1, 1, 5, 5, 1, 0, 4, 4, 5, 5, 3, 1, 0, 3,\n",
-       "        5, 0, 0, 5, 4, 2, 3, 0, 1, 3, 1, 1, 0, 0, 2, 3, 5, 1, 1, 0, 2, 1, 0, 5,\n",
-       "        3, 1, 1, 0], device='cuda:0')"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(14, device='cuda:0')"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred.eq(y).sum()"
+    "# pred"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pred.eq(y).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.8029375076293945"
+       "1.8177930116653442"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -740,10 +675,10 @@
     {
      "data": {
       "text/plain": [
-       "(1.8525471554862127, 0.14444444444444443)"
+       "(1.7738499111599393, 0.20666666666666667)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +696,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(m, p): torch.save(m.state_dict(), p)\n",
+    "    \n",
+    "def load_model(m, p): m.load_state_dict(torch.load(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = Path(\"/home/ubuntu/models/sandwich/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,12 +732,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(model, epochs=5, learning_rate=0.01):\n",
     "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
+    "    prev_val_acc = 0.0\n",
     "    for i in range(epochs):\n",
     "        model.train()\n",
     "        total = 0\n",
@@ -801,12 +757,18 @@
     "            sum_loss += batch*(loss.item())\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
     "        if i % 2 == 0:\n",
-    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc: \n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.8:\n",
+    "                path = \"{0}/ft_inception_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
@@ -824,11 +786,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.917 val loss 1.059 val accuracy 0.611\n",
-      "train loss 1.154 val loss 0.971 val accuracy 0.648\n",
-      "train loss 1.082 val loss 0.968 val accuracy 0.631\n",
-      "train loss 1.222 val loss 1.017 val accuracy 0.638\n",
-      "train loss 1.103 val loss 1.150 val accuracy 0.613\n"
+      "train loss 1.881 val loss 1.154 val accuracy 0.571\n",
+      "train loss 1.294 val loss 1.048 val accuracy 0.636\n",
+      "train loss 1.468 val loss 1.334 val accuracy 0.581\n",
+      "train loss 1.395 val loss 1.047 val accuracy 0.648\n",
+      "train loss 1.584 val loss 1.290 val accuracy 0.588\n"
      ]
     }
    ],
@@ -838,36 +800,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_model(m, p): torch.save(m.state_dict(), p)\n",
-    "    \n",
-    "def load_model(m, p): m.load_state_dict(torch.load(p))"
+    "save_model(model, model_path/\"initial_inception.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unfreeze top layers, train with lower learning rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = Path(\"/home/ubuntu/models/sandwich/initial_inception.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_model(model, model_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,25 +825,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path)"
+    "load_model(model, model_path/\"initial_inception.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.149076031314002, 0.6088888888888889)"
+       "(1.1315439840157826, 0.6322222222222222)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
