--- a/Densenet.ipynb
+++ b/Densenet.ipynb
@@ -340,20 +340,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3600, 900)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(train_ds), len(valid_ds)"
+    "# len(train_ds), len(valid_ds)"
    ]
   },
   {
@@ -369,20 +358,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((3, 299, 299), 5)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x.shape, y"
+    "# x.shape, y"
    ]
   },
   {
@@ -391,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 36"
+    "batch_size = 50"
    ]
   },
   {
@@ -435,40 +413,18 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([36, 3, 299, 299]), torch.Size([36]))"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x.shape, y.shape"
+    "# x.shape, y.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "36"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y.shape[0]"
+    "# y.shape[0]"
    ]
   },
   {
@@ -515,17 +471,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# layers"
+    "# layers[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -597,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, pred = torch.max(out, 1)"
+    "# _, pred = torch.max(out, 1)"
    ]
   },
   {
@@ -620,7 +578,7 @@
     }
    ],
    "source": [
-    "pred"
+    "# pred"
    ]
   },
   {
@@ -643,7 +601,7 @@
     }
    ],
    "source": [
-    "y"
+    "# y"
    ]
   },
   {
@@ -663,7 +621,7 @@
     }
    ],
    "source": [
-    "pred.eq(y).sum()"
+    "# pred.eq(y).sum()"
    ]
   },
   {
