--- a/Resnet.ipynb
+++ b/Resnet.ipynb
@@ -827,7 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unfreeze top layers, train with lower learning rate"
+    "# Unfreeze top 2 hidden layers, train with lower learning rate"
    ]
   },
   {
