--- a/Inception.ipynb
+++ b/Inception.ipynb
@@ -477,21 +477,12 @@
    },
    "outputs": [],
    "source": [
-    "# layers[15]"
+    "# layers[13]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# layers[16]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +491,7 @@
        "(768, 2048)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false
    },
@@ -543,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -563,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -574,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -594,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
@@ -605,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -622,10 +613,10 @@
     {
      "data": {
       "text/plain": [
-       "1.8177930116653442"
+       "1.8733607530593872"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -675,10 +666,10 @@
     {
      "data": {
       "text/plain": [
-       "(1.7738499111599393, 0.20666666666666667)"
+       "(1.828691992494795, 0.1388888888888889)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +751,7 @@
     "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.8:\n",
+    "            if val_acc > 0.68:\n",
     "                path = \"{0}/ft_inception_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)"
@@ -811,12 +802,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unfreeze top layers, train with lower learning rate"
+    "# Unfreeze top 2 hidden layers, train with lower learning rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +834,7 @@
        "(1.1315439840157826, 0.6322222222222222)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,10 +845,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def set_trainable_attr(m, b=True):\n",
+    "    for p in m.parameters(): p.requires_grad = b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unfreeze(model, layer_num):\n",
+    "    ct = 0\n",
+    "    for child in model.children():\n",
+    "        if ct == layer_num:\n",
+    "            set_trainable_attr(child)\n",
+    "    ct += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unfreeze(model, 16)\n",
+    "unfreeze(model, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 1.303 val loss 0.993 val accuracy 0.666\n",
+      "train loss 1.220 val loss 0.962 val accuracy 0.682\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
+      "train loss 1.173 val loss 0.937 val accuracy 0.677\n",
+      "train loss 1.163 val loss 0.909 val accuracy 0.686\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
+      "train loss 1.157 val loss 0.910 val accuracy 0.676\n",
+      "train loss 1.150 val loss 0.904 val accuracy 0.676\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
+      "train loss 1.132 val loss 0.892 val accuracy 0.689\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
+      "train loss 1.077 val loss 0.899 val accuracy 0.663\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
+      "train loss 1.062 val loss 0.871 val accuracy 0.687\n",
+      "train loss 1.094 val loss 0.894 val accuracy 0.673\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(model, epochs=20, learning_rate=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_model(model, model_path/\"initial_unfreeze2_inception.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unfreeze top 4 hidden layers, train with lower learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Inception().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"initial_inception.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.1315439840157826, 0.6322222222222222)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unfreeze(model, 16)\n",
+    "unfreeze(model, 15)\n",
+    "unfreeze(model, 14)\n",
+    "unfreeze(model, 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 1.316 val loss 1.000 val accuracy 0.673\n",
+      "train loss 1.277 val loss 0.954 val accuracy 0.667\n",
+      "train loss 1.205 val loss 0.929 val accuracy 0.672\n",
+      "train loss 1.190 val loss 0.925 val accuracy 0.676\n",
+      "train loss 1.146 val loss 0.918 val accuracy 0.682\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
+      "train loss 1.139 val loss 0.904 val accuracy 0.682\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
+      "train loss 1.101 val loss 0.919 val accuracy 0.680\n",
+      "train loss 1.074 val loss 0.893 val accuracy 0.684\n",
+      "train loss 1.066 val loss 0.893 val accuracy 0.671\n",
+      "train loss 1.015 val loss 0.886 val accuracy 0.678\n"
+     ]
+    }
+   ],
+   "source": [
+    "train(model, epochs=20, learning_rate=0.001)"
+   ]
   }
  ],
  "metadata": {
