--- a/InceptionResnet.ipynb
+++ b/InceptionResnet.ipynb
@@ -340,20 +340,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3600, 900)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(train_ds), len(valid_ds)"
+    "# len(train_ds), len(valid_ds)"
    ]
   },
   {
@@ -369,20 +358,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((3, 299, 299), 5)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x.shape, y"
+    "# x.shape, y"
    ]
   },
   {
@@ -391,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 100"
+    "batch_size = 50"
    ]
   },
   {
@@ -439,7 +417,7 @@
     {
      "data": {
       "text/plain": [
-       "(torch.Size([100, 3, 299, 299]), torch.Size([100]))"
+       "(torch.Size([50, 3, 299, 299]), torch.Size([50]))"
       ]
      },
      "execution_count": 31,
@@ -448,7 +426,7 @@
     }
    ],
    "source": [
-    "x.shape, y.shape"
+    "# x.shape, y.shape"
    ]
   },
   {
@@ -459,7 +437,7 @@
     {
      "data": {
       "text/plain": [
-       "100"
+       "50"
       ]
      },
      "execution_count": 32,
@@ -468,7 +446,7 @@
     }
    ],
    "source": [
-    "y.shape[0]"
+    "# y.shape[0]"
    ]
   },
   {
@@ -544,7 +522,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -556,6 +536,261 @@
    ],
    "source": [
     "print(len(layers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       "  (1): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       "  (2): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       "  (3): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       "  (4): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       "  (5): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       "  (6): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       "  (7): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       "  (8): Block8(\n",
+       "    (branch0): BasicConv2d(\n",
+       "      (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "      (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU()\n",
+       "    )\n",
+       "    (branch1): Sequential(\n",
+       "      (0): BasicConv2d(\n",
+       "        (conv): Conv2d(2080, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(192, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (1): BasicConv2d(\n",
+       "        (conv): Conv2d(192, 224, kernel_size=(1, 3), stride=(1, 1), padding=(0, 1), bias=False)\n",
+       "        (bn): BatchNorm2d(224, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "      (2): BasicConv2d(\n",
+       "        (conv): Conv2d(224, 256, kernel_size=(3, 1), stride=(1, 1), padding=(1, 0), bias=False)\n",
+       "        (bn): BatchNorm2d(256, eps=0.001, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "    (conv2d): Conv2d(448, 2080, kernel_size=(1, 1), stride=(1, 1))\n",
+       "    (relu): ReLU()\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layers[12]"
    ]
   },
   {
@@ -637,7 +872,7 @@
     }
    ],
    "source": [
-    "out.shape"
+    "# out.shape"
    ]
   },
   {
@@ -646,7 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, pred = torch.max(out, 1)"
+    "# _, pred = torch.max(out, 1)"
    ]
   },
   {
@@ -672,7 +907,7 @@
     }
    ],
    "source": [
-    "pred"
+    "# pred"
    ]
   },
   {
@@ -698,7 +933,7 @@
     }
    ],
    "source": [
-    "y"
+    "# y"
    ]
   },
   {
@@ -718,7 +953,7 @@
     }
    ],
    "source": [
-    "pred.eq(y).sum()"
+    "# pred.eq(y).sum()"
    ]
   },
   {
@@ -827,6 +1062,7 @@
    "source": [
     "def train(model, epochs=5, learning_rate=0.01):\n",
     "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
+    "    prev_val_acc = 0.0\n",
     "    for i in range(epochs):\n",
     "        model.train()\n",
     "        total = 0\n",
@@ -845,7 +1081,13 @@
     "            sum_loss += batch*(loss.item())\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
     "        if i % 2 == 0:\n",
-    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc: \n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.68:\n",
+    "                path = \"{0}/ft_inceptionresnet_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)"
    ]
   },
   {
@@ -897,7 +1139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = Path(\"/home/ubuntu/models/sandwich/initial_inceptionresnet.pth\")"
+    "model_path = Path(\"/home/ubuntu/models/sandwich/\")"
    ]
   },
   {
@@ -906,7 +1148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_model(model, model_path)"
+    "save_model(model, model_path/\"initial_inceptionresnet.pth\")"
    ]
   },
   {
@@ -924,7 +1166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path)"
+    "load_model(model, model_path/\"initial_inceptionresnet.pth\")"
    ]
   },
   {
